# foundation-domain

./: AGENT_TASK_ASSIGNMENT.md  AUTOMATED_DEPLOYMENT.ps1  CICD_MANAGEMENT_PLAN.md  DEPLOY_FOUNDATION.bat  DEPLOY_NOW.ps1  EXECUTION_PLAN.md  FOLDER_RULES.md  FOUNDATION_DOMAIN_COMPLETE_GUIDE.md  FOUNDATION_DOMAIN_COMPLETE_INVENTORY.csv  FOUNDATION_SERVICES_FIXES_REQUIRED.md  PROJECT_SUMMARY.md  QUICK_FIX_BUCKET4J.ps1  README.md  Simple-Deploy.ps1  check-cicd-status.ps1  deploy-foundation-domain.bat  deploy-foundation-domain.sh  deploy-foundation.ps1  deploy-fresh.sh  deploy-management-domain.ps1  fix-all-services.sh  fix-dependencies.ps1  fix-dependencies.sh  foundation-domain-status-report.md  generate-all-services.sh  monitor-cicd.ps1  remove-secrets-filter.py  setup-branches.ps1
.github/: README.md  pull_request_template.md
.github/workflows/: ai-services-ci.yml  central-configuration-ci.yml  centralized-dashboard-ci.yml  ci-foundation-domain.yml  deploy-production.yml  java-services-ci.yml  nodejs-services-ci.yml  shared-infrastructure-ci.yml  shared-libraries-ci.yml
AGENT_TASK_ASSIGNMENTS/: README.md
AGENT_TASK_ASSIGNMENTS/AGENT_A_SHARED_LIBRARIES/: BLUEPRINT_GUIDELINES.md  DEADLINES.md  DELIVERABLES.md  IMPLEMENTATION_CHECKLIST.md  TASK_ASSIGNMENT.md  VALIDATION_REQUIREMENTS.md
AGENT_TASK_ASSIGNMENTS/AGENT_B_CENTRALIZED_DASHBOARD/: BLUEPRINT_GUIDELINES.md  DEADLINES.md  DELIVERABLES.md  IMPLEMENTATION_CHECKLIST.md  TASK_ASSIGNMENT.md  VALIDATION_REQUIREMENTS.md
AGENT_TASK_ASSIGNMENTS/AGENT_C_AI_SERVICES/: BLUEPRINT_GUIDELINES.md  DEADLINES.md  DELIVERABLES.md  IMPLEMENTATION_CHECKLIST.md  TASK_ASSIGNMENT.md  VALIDATION_REQUIREMENTS.md
ai-services/: .env.native  AGENT_TASK_SPECIFICATION.md  AI_SERVICES_CAPABILITIES_GUIDE.md  AI_SERVICES_COMPLETION_PLAN.md  AI_SERVICES_COMPREHENSIVE_GUIDE.md  AI_SERVICES_PRODUCTION_READINESS_REPORT.md  BUILD_AND_DEPLOY_SCRIPTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_AI_SERVICES_DOCUMENTATION.md  COMPLETE_AI_SERVICES_GUIDE.md  COMPLETE_PLATFORM_SUMMARY.md  CONTRIBUTING.md  COST_EFFECTIVE_AI_PROVIDERS.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  JAVA_SERVICES_TEMPLATE_PROCESSING.md  MAINTAINERS.md  MANAGEMENT_DOMAIN_IMPLEMENTATION_GUIDE.md  MARKETING_AI_SERVICES_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PROJECT_SUMMARY.md  README.md  README_LOCAL_DEPLOYMENT.md  README_NATIVE_SETUP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_INTEGRATIONS.md  create_structure.bat  docker-compose.local.yml  docker-compose.yml  fix_all_ai_services.sh  generate_data.bat  generate_remaining_ai_services.sh  launch-all-ai-services.py  launch-marketing-services-simple.py  launch-marketing-services.py  monitor_services.bat  production_readiness_test.sh  quick_status_check.sh  requirements-native.txt  (+10 more)
ai-services/ai-platform/: config_native.py
ai-services/backend-services/python-services/gogidix-ai-platform/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
ai-services/backend-services/python-services/gogidix-ai-platform/docker/: ethical-ai.Dockerfile
ai-services/backend-services/python-services/gogidix-ai-platform/docs/: API.md  DEPLOYMENT.md
ai-services/backend-services/python-services/gogidix-ai-platform/kubernetes/: 04-ethical-ai.yaml  namespace.yaml
ai-services/backend-services/python-services/gogidix-ai-platform/kubernetes/ai-gateway/: 01-deployment.yaml  02-service.yaml  03-configmap.yaml  04-rbac.yaml
ai-services/backend-services/python-services/gogidix-ai-platform/kubernetes/data-infrastructure/: 01-postgres.yaml  02-redis.yaml  03-kafka.yaml
ai-services/backend-services/python-services/gogidix-ai-platform/kubernetes/gpu-operator/: 01-nvidia-gpu-operator.yaml  02-gpu-node-labeler.yaml  03-gpu-device-plugin.yaml  04-gpu-monitoring.yaml  05-nvidia-mig-manager.yaml
ai-services/backend-services/python-services/gogidix-ai-platform/kubernetes/ml-platform/: 01-mlflow.yaml  02-kubeflow.yaml  03-tfx.yaml
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/: __init__.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/ai_gateway/: __init__.py  cache.py  dependencies.py  main.py  middleware.py  models.py  monitoring.py  router.py  service.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/ai_gateway/api/v1/: __init__.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/ai_gateway/api/v1/endpoints/: __init__.py  admin.py  inference.py  models.py  monitoring.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/conversational_ai/: __init__.py  chatbot.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/core/: config.py  exceptions.py  logging.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/ethical_ai/: __init__.py  api.py  service.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/gateway_integration/: __init__.py  auth.py  config.py  middleware.py
ai-services/backend-services/python-services/gogidix-ai-platform/src/gogidix_ai/property_intelligence/: __init__.py  image_analysis.py  recommendation.py  valuation.py
ai-services/backend-services/python-services/gogidix-ai-platform/tests/: test_ethical_ai.py
centralized-dashboard/: CENTRALIZED_DASHBOARD_COMPLETION_REPORT.md  Makefile  PRODUCTION_READINESS_AGENT_ACTION_PLAN.md  README.md  VALIDATION_REPORT.md  dashboard_production_readiness_test.sh  docker-compose.yml  fix_all_dashboard_services.sh  generate_all_dashboard_services.sh
database-service/: Dockerfile
shared-infrastructure/: AGENT_B_INTEGRATION_GUIDE.md  AGENT_C_INTEGRATION_GUIDE.md  AGENT_TASK_SPECIFICATION.md  CENTRAL_CONFIG_INTEGRATION.md  DOCUMENTATION.md  INFRASTRUCTURE_STATUS_REPORT.md  PRODUCTION_READINESS_REPORT.md  VALIDATION_REPORT.md  fix_all_infrastructure_services.sh  generate_all_infrastructure_services.sh  infrastructure_production_readiness_test.sh
shared-libraries/: AGENT_A_INTEGRATION_GUIDE.md  pom.xml
(+6516 files in other folders)
