[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogidix-ai-services"
version = "1.0.0"
description = "Enterprise AI Services for Gogidix Property Marketplace"
authors = [
    {name = "AI Services Team", email = "ai-team@gogidix.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
keywords = ["ai", "ml", "property", "real-estate", "fastapi", "microservices"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # Async Support
    "httpx>=0.25.2",
    "aiohttp>=3.9.1",
    "aioredis>=2.0.1",
    "asyncpg>=0.29.0",

    # Machine Learning Core
    "tensorflow>=2.15.0",
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "scikit-learn>=1.3.2",
    "xgboost>=2.0.3",
    "lightgbm>=4.1.0",

    # Natural Language Processing
    "transformers>=4.36.0",
    "tokenizers>=0.15.1",
    "sentence-transformers>=2.2.2",
    "spacy>=3.7.2",
    "nltk>=3.8.1",
    "langdetect>=1.0.9",

    # Computer Vision
    "opencv-python>=4.8.1.78",
    "pillow>=10.1.0",
    "ultralytics>=8.0.206",

    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "scipy>=1.11.4",
    "dask[complete]>=2023.11.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.23",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",

    # Search and Vector DB
    "elasticsearch[async]>=8.11.0",
    "milvus>=2.3.3",
    "faiss-cpu>=1.7.4",

    # Message Queue
    "kafka-python>=2.0.2",
    "aiokafka>=0.8.11",
    "celery[redis]>=5.3.4",

    # Monitoring and Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.8",

    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.2",

    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
    "mkdocstrings[python]>=0.24.0",

    # Development Tools
    "ipython>=8.17.2",
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
]

gpu = [
    "tensorflow-gpu>=2.15.0",
    "torch>=2.1.1+cu121",
    "torchvision>=0.16.1+cu121",
    "faiss-gpu>=1.7.4",
    "cupy-cuda12x>=12.3.0",
]

monitoring = [
    "grafana-api>=1.0.3",
    "psutil>=5.9.6",
    "GPUtil>=1.4.0",
    "py-cpuinfo>=9.0.0",
]

[project.urls]
Homepage = "https://gogidix.com"
Documentation = "https://docs.gogidix.com/ai-services"
Repository = "https://github.com/gogidix/ai-services"
Issues = "https://github.com/gogidix/ai-services/issues"

[project.scripts]
gogidix-ai = "gogidix_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gogidix_ai*"]

[tool.setuptools.package-dir]
"" = "src"

# Black Configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort Configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["gogidix_ai"]
known_third_party = ["fastapi", "pydantic", "tensorflow", "torch"]

# MyPy Configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "torchvision.*",
    "tensorflow.*",
    "sklearn.*",
    "xgboost.*",
    "lightgbm.*",
    "redis.*",
    "kafka.*",
    "elasticsearch.*",
    "milvus.*",
]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "model: marks model-related tests",
]
asyncio_mode = "auto"

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit Security Configuration
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B601"]